Fixed homepage title alignment

--- a/portfolio/src/styles/partials/_main.scss
+++ b/portfolio/src/styles/partials/_main.scss
@@ -11,6 +11,7 @@
     font-size: 2.5rem;
     @media (min-width: 650px) {
       font-size: 3.5rem;
+      margin: 50px 0 0 30px;
     }
   }
 }
